infra/k8s/backend-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 13angs/line-sticker-api:v0.0.2
        ports:
        - containerPort: 5000

---

apiVersion: v1 
kind: Service
metadata:
  name: backend-srv
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      name: backend
      targetPort: 5000
      protocol: TCP
      nodePort: 30001
  type: NodePort
